--- a/css/student/_nav.scss
+++ b/css/student/_nav.scss
@@ -1,103 +1,50 @@
 @import "../mixin";
-@import "../colors";
 
 nav {
-  height: 70px;
-  padding: 0 10%;
+  height: 80px;
+  padding: 0 150px;
+  background: white;
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  border-bottom: 1px solid #ddd;
-  .logo-container {
+  align-items: center;
+  .nav-back,
+  .nav-user {
+      height: 100%;
+    width: 100px;
     display: flex;
     align-items: center;
-    .hamburger {
-      margin-left: -30px;
-      position: absolute;
-      display: none;
-    }
-    img {
-      width: 100px;
-    }
+    column-gap: 10px;
   }
-  .nav-items {
-    display: flex;
-    align-items: center;
-    column-gap: 100px;
+  .logo,
+  img {
+    width: 100px;
   }
-  a {
-    cursor: pointer;
-  }
-  li,
-  span {
-    @include poppins;
-    font-size: 16px;
-  }
-  ul {
-    display: flex;
-    column-gap: 50px;
-    list-style: none;
-    li.active a {
-      color: $red;
-    }
-  }
-  .user {
-    padding: 20px 0;
-    width: max-content;
-    div {
-      display: flex;
-      align-items: center;
-      column-gap: 10px;
-      i {
-        height: 22px;
-      }
-    }
+  .nav-user {
     .user-dropdown {
-      margin-left: -30px;
-      padding: 16px;
-      min-width: 180px;
+      width: 150px;
+      margin: 110px 0 0 -40px;
+      padding: 12px 16px 16px 16px;
       position: absolute;
+      background: #fff;
+      border: 1px solid #dadada;
+      border-radius: 8px;
       opacity: 0;
-      transition: 0.1s ease;
-      overflow: hidden;
       z-index: -1;
       animation: slide-up 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-      ul {
-        display: flex;
-        flex-direction: column;
-        row-gap: 8px;
-        padding: 12px 16px 16px 16px;
-        background: #fff;
-        border: 1px solid #dadada;
-        border-radius: 8px;
-        span {
-          font-size: 14px;
-          color: #888;
-        }
-        li {
-          color: #222;
-          font-size: 14px;
-          cursor: pointer;
-        }
-        hr {
-          border: none;
-          border-top: 1px solid #eee;
-          margin: 4px 0;
-        }
-      }
+      transition: 0.1s ease-out;
     }
     &:hover .user-dropdown,
     &:focus-within .user-dropdown {
       animation: slide-down 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-      z-index: 0;
       opacity: 1;
+      z-index: 1;
     }
   }
 }
 
 @keyframes slide-down {
   0% {
-    transform: translateY(-20px);
+    transform: translateY(-40px);
   }
   100% {
     transform: translateY(0);
@@ -109,34 +56,6 @@ nav {
     transform: translateY(0);
   }
   100% {
-    transform: translateY(-20px);
-  }
-}
-
-@media only screen and (max-width: 1000px) {
-  nav {
-    justify-content: center;
-    flex-direction: column;
-    .logo-container .hamburger {
-      display: block;
-    }
-    .nav-items {
-      margin-top: 480px;
-      height: 50%;
-      width: 100%;
-      background-color: white;
-      flex-direction: column;
-      justify-content: start;
-      z-index: 1;
-      position: absolute;
-      transition: 0.4s ease-in-out;
-      transform: translateX(-100%);
-      &.active {
-        transform: translateX(0%);
-      }
-      ul {
-        flex-direction: column;
-      }
-    }
+    transform: translateY(-40px);
   }
 }
