--- a/css/style.scss
+++ b/css/style.scss
@@ -1,11 +1,10 @@
 @import "colors";
 @import "mixin";
-@import "dark-theme";
 
 * {
   padding: 0;
   margin: 0;
-  @include europa;
+  @include roboto;
   outline: none;
 }
 
