--- a/css/student/_nav.scss
+++ b/css/student/_nav.scss
@@ -1,19 +1,30 @@
 @import "../mixin";
 
 nav {
-  height: 80px;
+  height: 70px;
   padding: 0 150px;
   background: white;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-bottom: 1px solid #eee;
+  span, a, label {
+    @include poppins;
+  }
+  .nav-item {
+    // font-size: 18px;
+  }
   .nav-back,
   .nav-user {
-      height: 100%;
+    height: 100%;
     width: 100px;
     display: flex;
     align-items: center;
-    column-gap: 10px;
+    column-gap: 16px;
+    // column-gap: 20px;
+  }
+  .nav-back i {
+    font-size: 14px;
   }
   .logo,
   img {
@@ -22,8 +33,11 @@ nav {
   .nav-user {
     .user-dropdown {
       width: 150px;
-      margin: 110px 0 0 -40px;
+      margin: 220px 0 0 -30px;
       padding: 12px 16px 16px 16px;
+      display: flex;
+      flex-direction: column;
+      row-gap: 8px;
       position: absolute;
       background: #fff;
       border: 1px solid #dadada;
@@ -32,6 +46,21 @@ nav {
       z-index: -1;
       animation: slide-up 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
       transition: 0.1s ease-out;
+      label {
+        font-size: 14px;
+        color: #888;
+      }
+      hr {
+        height: 1px;
+        margin: 2px 0;
+        background: #ddd;
+        border: none;
+      }
+      i.fad {
+        margin-left: 10px;
+        --fa-primary-color: #ffc24d;
+        --fa-secondary-color: orange;
+      }
     }
     &:hover .user-dropdown,
     &:focus-within .user-dropdown {
