--- a/css/style.scss
+++ b/css/style.scss
@@ -13,19 +13,20 @@ body {
 }
 
 .loading-screen {
+  background: white;
   height: 100vh;
   width: 100vw;
   position: fixed;
   overflow-x: hidden;
-  z-index: 1;
+  z-index: 99;
   transition: 0.1s ease-out;
   .spinner {
     animation: rotate 2s linear infinite;
     z-index: 2;
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
-    margin: -125px 0 0 -25px;
+    margin: 0 0 0 -25px;
     width: 30px;
     height: 30px;
     & .path {
@@ -56,11 +57,8 @@ body {
 }
 
 a {
-  padding: 4px 0;
   color: black;
   text-decoration: none;
-  border-bottom: 1px solid rgba(255, 255, 255, 0);
-  // @include poppins;
 }
 
 input {
@@ -114,10 +112,27 @@ a {
 
 footer {
   width: 100%;
-  margin-bottom: 20px;
   text-align: center;
-  color: #666;
-  .copyright {
-    font-size: 12px;
-  }
+  color: #aaa;
+  font-size: 10px;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f5f5f5;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #ddd;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #ccc;
 }
