--- a/css/student/_home.scss
+++ b/css/student/_home.scss
@@ -11,7 +11,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    row-gap: 10px;
+    row-gap: 12px;
     padding: 12px 16px 16px 16px;
     border: 1px solid #dadada;
     border-radius: 16px;
@@ -19,7 +19,9 @@
     opacity: 0;
     i {
       font-size: 28px;
-      font-weight: 300;
+      &.fa-history {
+        font-weight: 300;
+      }
     }
     &:hover {
       animation: scale-up-center 0.1s ease-out both;
@@ -32,13 +34,13 @@
     transform: scale(1);
   }
   100% {
-    transform: scale(1.05);
+    transform: scale(1.1);
   }
 }
 
 @keyframes scale-down-center {
   0% {
-    transform: scale(1.05);
+    transform: scale(1.1);
   }
   100% {
     transform: scale(1);
