--- a/css/student/student-dark.css
+++ b/css/student/student-dark.css
@@ -171,16 +171,42 @@ body, nav {
   transition: 0.1 ease-out;
 }
 
-@media (prefers-color-scheme: dark) {
-  body {
-    background: black;
-  }
-  .loading-screen {
-    background: black;
-  }
-}
-
 .loading-screen {
   height: calc(100% - 81px - 10vh);
 }
-/*# sourceMappingURL=student.css.map */
+
+* {
+  color: #ccc !important;
+}
+
+body.dark {
+  background: black !important;
+}
+
+body.dark nav,
+body.dark nav .user-dropdown,
+body.dark .loading-screen {
+  background: black !important;
+}
+
+body.dark nav {
+  border-bottom: 1px solid #333;
+}
+
+body.dark nav .user-dropdown {
+  border-color: #444 !important;
+}
+
+body.dark nav .user-dropdown hr {
+  background: #444 !important;
+}
+
+body.dark .container .card {
+  border-color: #333;
+  background: #080808 !important;
+}
+
+body.dark footer p {
+  color: #666 !important;
+}
+/*# sourceMappingURL=student-dark.css.map */
