--- a/css/student/student.scss
+++ b/css/student/student.scss
@@ -7,6 +7,19 @@ body {
   height: 100vh;
 }
 
+body, nav {
+  transition: 0.1 ease-out;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background: black;
+  }
+  .loading-screen {
+    background: black;
+  }
+}
+
 .loading-screen {
   height: calc(100% - 81px - 10vh);
 }
