Added new request page

--- a/css/student/_home.scss
+++ b/css/student/_home.scss
@@ -1,27 +1,15 @@
 .container {
-  height: 70vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  column-gap: 50px;
-  .card {
+  .button.card {
     height: 150px;
     width: 150px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     row-gap: 12px;
-    padding: 12px 16px 16px 16px;
-    border: 1px solid #dadada;
-    border-radius: 16px;
     animation: scale-down-center 0.1s ease-in both;
     opacity: 0;
     i {
       font-size: 28px;
-      &.fa-history {
-        font-weight: 300;
-      }
+      font-weight: 300;
     }
     &:hover {
       animation: scale-up-center 0.1s ease-out both;
