--- a/css/student/student.css
+++ b/css/student/student.css
@@ -100,38 +100,22 @@ nav .nav-user:focus-within .user-dropdown {
   }
 }
 
-.container {
-  height: 70vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  column-gap: 50px;
-}
-
-.container .card {
+.container .button.card {
   height: 150px;
   width: 150px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
   row-gap: 12px;
-  padding: 12px 16px 16px 16px;
-  border: 1px solid #dadada;
-  border-radius: 16px;
   animation: scale-down-center 0.1s ease-in both;
   opacity: 0;
 }
 
-.container .card i {
+.container .button.card i {
   font-size: 28px;
-}
-
-.container .card i.fa-history {
   font-weight: 300;
 }
 
-.container .card:hover {
+.container .button.card:hover {
   animation: scale-up-center 0.1s ease-out both;
 }
 
@@ -167,8 +151,102 @@ body {
   height: 100vh;
 }
 
-body, nav {
+body,
+nav {
   transition: 0.1 ease-out;
+}
+
+.container {
+  height: 70vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 50px;
+  row-gap: 20px;
+}
+
+.container .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 12px 16px 16px 16px;
+  border: 1px solid #dadada;
+  border-radius: 16px;
+  text-align: left;
+}
+
+.container .card .heading {
+  font-size: 14px;
+}
+
+.container .card.form {
+  min-height: 300px;
+  width: 300px;
+  padding: 32px 36px 36px 36px;
+  justify-content: unset;
+  align-items: unset;
+}
+
+.container .card.form:focus-within {
+  border-color: #f9ced0;
+}
+
+.container .card.form .heading {
+  margin-bottom: 36px;
+}
+
+.container .card.form label {
+  color: #888;
+  margin-bottom: 12px;
+}
+
+.container .card.form input {
+  margin-bottom: 20px;
+  padding: 0 0 10px 0;
+  border: none;
+  border-bottom: 1px solid #ccc;
+  transition: 0.15s ease-out;
+}
+
+.container .card.form input:hover {
+  border-color: #f9ced0;
+}
+
+.container .card.form input:focus {
+  border-color: #e20c18;
+}
+
+.container .card.form button {
+  padding: 6px 12px;
+  border-radius: 8px;
+  background: #eee;
+  color: #222;
+  border: 1px solid #f8f8f8;
+  align-self: flex-end;
+  display: flex;
+  align-items: center;
+  column-gap: 8px;
+}
+
+.container .card.form button:hover {
+  background: #eee;
+  border-color: #ccc;
+}
+
+.container .card.form button:focus {
+  background: #fdf0f0;
+  border-color: #f9ced0;
+}
+
+.container.row {
+  flex-direction: column;
+}
+
+.container .heading {
+  display: flex;
+  align-items: center;
+  column-gap: 20px;
 }
 
 @media (prefers-color-scheme: dark) {
