--- a/css/student/student-dark.scss
+++ b/css/student/student-dark.scss
@@ -6,7 +6,6 @@
 
 body.dark {
   background: black !important;
-
   nav,
   nav .user-dropdown,
   .loading-screen {
@@ -21,16 +20,60 @@ body.dark {
       }
     }
   }
-
   .container {
     .card {
       border-color: #333;
       background: #080808 !important;
+      button {
+        border-color: #222;
+        background: #222;
+        &:hover {
+          border-color: #444;
+          background: #333;
+        }
+        &:focus {
+          border-color: #444;
+          background: #444;
+        }
+      }
+      a.view-request {
+        border-color: #444;
+        background: #333;
+        &:focus {
+          border-color: #444;
+          background: #444;
+        }
+      }
     }
   }
-
+  label {
+    color: #666 !important;
+  }
+  input {
+    border-color: #444 !important;
+    background: none;
+    &:hover {
+    }
+    &:focus {
+      border-color: $red !important;
+    }
+  }
+  .toast {
+    border-color: #333;
+    background: #111;
+    button {
+      border-color: #111;
+      background: #111;
+      &:hover, &:focus {
+        border-color: #444;
+        background: #333;
+      }
+      &:active {
+        background: #444;
+      }
+    }
+  }
   footer p {
     color: #666 !important;
   }
 }
-
