--- a/css/style.css
+++ b/css/style.css
@@ -120,11 +120,70 @@ a:active {
   transition: 0.05 ease-out;
 }
 
-footer {
+.toast-container {
   width: 100%;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  left: 0;
+  bottom: 20px;
+  transform: translateY(10px);
+  opacity: 0;
+  z-index: -1;
+  transition: 0.1s ease-out;
+}
+
+.toast-container.active {
+  transform: translateY(0px);
+  opacity: 1;
+  z-index: 1;
+}
+
+.toast-container .toast {
+  height: max-content;
+  padding: 6px 8px 6px 22px;
+  display: flex;
+  align-items: center;
+  column-gap: 8px;
+  background: #fafafa;
+  border: 1px solid #ccc;
+  border-radius: 12px;
+  font-size: 15px;
+}
+
+.toast-container .toast button {
+  border-radius: 50%;
+  border: 1px solid #f8f8f8;
+  transition: 0.2s;
+  align-self: flex-end;
+}
+
+.toast-container .toast button:hover, .toast-container .toast button:focus {
+  background: #fdf0f0;
+  color: #e20c18;
+  border: 1px solid #f9ced0;
+}
+
+.toast-container .toast button:active {
+  background: #f9ced0;
+  transition: 0.05s;
+}
+
+.toast-container .toast i {
+  padding: 6px 8px;
+  font-weight: 400;
+}
+
+footer {
+  height: 10vh;
+  width: 100%;
+  position: fixed;
+  left: 0;
+  bottom: 0;
   color: #aaa;
+  text-align: center;
   font-size: 10px;
+  z-index: -1;
 }
 
 /* width */
