--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -1,7 +1,8 @@
 $darkRed: #71060c;
 $red: #e20c18;
+$lightRed: #fdf0f0;
 $border: #eee;
 $focus: #444;
 $redHover: #fdf0f0;
-$redActive: #f9ced0;
+$redActive: #fdf0f0;
 $redBorder: #f9ced0;
