--- a/css/student/_cards.scss
+++ b/css/student/_cards.scss
@@ -1,11 +1,13 @@
 .heading {
   margin-bottom: 28px;
+
   h2 {
     font-size: 20px;
   }
 }
 
 .card {
+  height: max-content;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -15,10 +17,12 @@
   border-radius: 16px;
   text-align: left;
   opacity: 0;
+
   .col {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+
     a.view-request {
       height: 35px;
       width: 35px;
@@ -27,33 +31,40 @@
       justify-content: center;
       align-items: center;
       opacity: 0;
+
       i {
         font-size: 0px;
         transition: 0.2s ease-out;
       }
     }
   }
+
   a.view-request,
   button {
     background: #eee;
     color: #222;
     border: 1px solid #f8f8f8;
+
     &:hover {
       background: #eee;
       border-color: #ccc;
     }
+
     &:focus {
       background: $redHover;
       border-color: $redBorder;
     }
   }
+
   &:hover a.view-request,
   &:focus-within a.view-request {
     opacity: 1;
+
     i {
       font-size: 14px;
     }
   }
+
   button {
     padding: 6px 12px;
     border-radius: 8px;
@@ -63,35 +74,42 @@
     column-gap: 8px;
   }
 }
-.card.request,
-.payment {
+
+.card.request {
   padding: 32px 36px 36px 36px;
 }
+
 .card.request {
   min-height: 200px;
   width: 300px;
   justify-content: unset;
   align-items: unset;
+
   &:focus-within {
     border-color: $redBorder;
   }
+
   label {
     color: #888;
     margin-bottom: 8px;
   }
+
   input {
     margin-bottom: 20px;
     padding: 0 0 10px 0;
     border: none;
     border-bottom: 1px solid #ccc;
     transition: 0.15s ease-out;
+
     &:hover {
       border-color: $redActive;
     }
+
     &:focus {
       border-color: $red;
     }
   }
+
   p {
     margin-bottom: 16px;
   }
