--- a/css/student/_nav.scss
+++ b/css/student/_nav.scss
@@ -8,14 +8,12 @@ nav {
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid #eee;
-  span,
+
   a,
   label {
     @include poppins;
   }
-  .nav-item {
-    // font-size: 18px;
-  }
+
   .nav-back,
   .nav-user {
     height: 100%;
@@ -23,23 +21,36 @@ nav {
     display: flex;
     align-items: center;
     column-gap: 16px;
-    // column-gap: 20px;
   }
+
   .nav-back i {
     font-size: 14px;
   }
+
   .logo,
   img {
     width: 100px;
   }
+
+  img {
+    pointer-events: none;
+  }
+
   .nav-user {
+
+    &:hover .user-dropdown,
+    &:focus-within .user-dropdown {
+      animation: slide-down 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+      opacity: 1;
+      z-index: 1;
+    }
+
     .user-dropdown {
-      width: 150px;
+      width: max-content;
       margin: 220px 0 0 -30px;
-      padding: 12px 16px 16px 16px;
+      padding: 12px 12px 16px 12px;
       display: flex;
       flex-direction: column;
-      row-gap: 8px;
       position: absolute;
       background: #fff;
       border: 1px solid #dadada;
@@ -48,30 +59,59 @@ nav {
       z-index: -1;
       animation: slide-up 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
       transition: 0.1s ease-out;
+
       label {
+        padding: 2px 4px;
         font-size: 14px;
         color: #888;
       }
+
+      a,
+      button {
+        padding: 4px 4px;
+        border-radius: 4px;
+
+        &:active,
+        &:focus {
+          background: #222;
+          color: white;
+        }
+      }
+
       hr {
         height: 1px;
-        margin: 2px 0;
+        margin: 6px 0;
         background: #ddd;
         border: none;
       }
+
       i.fad {
-        margin-left: 10px;
-        --fa-primary-color: #ffc24d;
-        --fa-secondary-color: orange;
-        --fa-primary-opacity: 1;
-        --fa-secondary-opacity: 1;
+        margin: 0 8px;
+        transform: translateY(0px);
+        opacity: 1;
         transition: 0.3s ease-out !important;
+        transform: translateY(6px);
+        opacity: 0;
+
+        &.shown {
+          transform: translateY(0px);
+          opacity: 1;
+        }
+
+        &.fa-sun {
+          --fa-primary-color: #ffc24d;
+          --fa-secondary-color: orange;
+          --fa-primary-opacity: 1;
+          --fa-secondary-opacity: 1;
+        }
+
+        &.fa-moon-cloud {
+          --fa-primary-color: #363548;
+          --fa-secondary-color: #f9d35f;
+          --fa-primary-opacity: 1;
+          --fa-secondary-opacity: 1;
+        }
       }
-    }
-    &:hover .user-dropdown,
-    &:focus-within .user-dropdown {
-      animation: slide-down 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-      opacity: 1;
-      z-index: 1;
     }
   }
 }
@@ -80,6 +120,7 @@ nav {
   0% {
     transform: translateY(-40px);
   }
+
   100% {
     transform: translateY(0);
   }
@@ -89,6 +130,7 @@ nav {
   0% {
     transform: translateY(0);
   }
+
   100% {
     transform: translateY(-40px);
   }
