--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,6 @@ body {
 }
 
 .loading-screen {
-  background: white;
   height: 100vh;
   width: 100vw;
   position: fixed;
@@ -62,6 +61,10 @@ body {
   }
 }
 
+img {
+  pointer-events: none;
+}
+
 a {
   color: black;
   text-decoration: none;
@@ -76,11 +79,12 @@ button {
   background: none;
   border: none;
   cursor: pointer;
+  text-align: left;
 }
 
 button span {
+  font-size: 16px;
   font-family: "Poppins", sans-serif;
-  font-size: 14px;
 }
 
 a {
@@ -139,6 +143,10 @@ a:active {
   z-index: 1;
 }
 
+.toast-container.active .toast button {
+  display: block;
+}
+
 .toast-container .toast {
   height: max-content;
   padding: 6px 8px 6px 22px;
@@ -151,11 +159,16 @@ a:active {
   font-size: 15px;
 }
 
+.toast-container .toast .close-btn-container {
+  width: 25px;
+}
+
 .toast-container .toast button {
   border-radius: 50%;
   border: 1px solid #f8f8f8;
   transition: 0.2s;
   align-self: flex-end;
+  display: none;
 }
 
 .toast-container .toast button:hover, .toast-container .toast button:focus {
@@ -175,7 +188,7 @@ a:active {
 }
 
 footer {
-  height: 10vh;
+  height: 5vh;
   width: 100%;
   position: fixed;
   left: 0;
