--- a/css/style.scss
+++ b/css/style.scss
@@ -13,7 +13,7 @@ body {
 }
 
 .loading-screen {
-  background: white;
+  // background: white;
   height: 100vh;
   width: 100vw;
   position: fixed;
@@ -62,6 +62,10 @@ body {
   }
 }
 
+img {
+  pointer-events: none;
+}
+
 a {
   color: black;
   text-decoration: none;
@@ -76,10 +80,10 @@ button {
   background: none;
   border: none;
   cursor: pointer;
-
+  text-align: left;
   span {
+    font-size: 16px;
     @include poppins;
-    font-size: 14px;
   }
 }
 
@@ -135,6 +139,10 @@ a {
     transform: translateY(0px);
     opacity: 1;
     z-index: 1;
+
+    .toast button {
+      display: block;
+    }
   }
 
   .toast {
@@ -148,11 +156,16 @@ a {
     border-radius: 12px;
     font-size: 15px;
 
+    .close-btn-container {
+      width: 25px;
+    }
+
     button {
       border-radius: 50%;
       border: 1px solid #f8f8f8;
       transition: 0.2s;
       align-self: flex-end;
+      display: none;
 
       &:hover,
       &:focus {
@@ -175,7 +188,7 @@ a {
 }
 
 footer {
-  height: 10vh;
+  height: 5vh;
   width: 100%;
   position: fixed;
   left: 0;
