--- a/css/student/student.css
+++ b/css/student/student.css
@@ -53,7 +53,6 @@ nav .nav-user:focus-within .user-dropdown {
 }
 
 nav .nav-user .user-dropdown {
-  width: max-content;
   margin: 220px 0 0 -30px;
   padding: 12px 12px 16px 12px;
   display: flex;
@@ -95,9 +94,9 @@ nav .nav-user .user-dropdown hr {
 }
 
 nav .nav-user .user-dropdown i.fad {
+  width: 20px;
   margin: 0 8px;
-  transform: translateY(0px);
-  opacity: 1;
+  font-size: 16px;
   transition: 0.3s ease-out !important;
   transform: translateY(6px);
   opacity: 0;
