Mobile view implementation

--- a/css/student/_request-view.scss
+++ b/css/student/_request-view.scss
@@ -1,80 +1,71 @@
 .payment {
-    padding: 10px 36px 36px 36px;
+  padding: 12px 36px 0 36px;
+  display: flex;
+  flex-direction: column;
+
+  .heading {
+    margin-bottom: 10px;
+  }
+
+  .card {
+    margin-top: 20px;
+    margin-bottom: 30px;
+    padding: 20px 24px;
+    row-gap: 20px;
+
+    .payment-info {
+      display: grid;
+      grid-template-columns: 70px 1fr auto;
+      justify-items: center;
+      align-items: center;
+      column-gap: 20px;
+
+      p {
+        @include poppins;
+        cursor: text;
+      }
+
+      a {
+        i:hover,
+        &:focus-within i {
+          color: $red;
+        }
+
+        i {
+          color: #888;
+          font-weight: 400;
+          margin: 0 8px;
+        }
+      }
+    }
+  }
+
+  .receipt-input {
+    padding: 8px 12px;
+    border-radius: 8px;
+    border: 2px dashed #dadada;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    column-gap: 10px;
+    transition: 0.1s ease-out;
+    cursor: pointer;
 
-    .heading {
-        margin-bottom: 10px;
+    &:hover,
+    &:focus-within {
+      border: 2px dashed $red;
+      background: $lightRed;
     }
 
-    .order {
-        width: max-content;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        margin-bottom: 30px;
+    span {
+      @include poppins;
     }
+  }
 
-    .receipt-input {
-        width: max-content;
-        margin-bottom: 30px;
-        padding: 6px 12px;
-        border-radius: 8px;
-        border: 2px dashed #ccc;
-        display: flex;
-        align-items: center;
-        column-gap: 10px;
-        transition: 0.1s ease-out;
-        cursor: pointer;
-
-        &:hover,
-        &:focus-within {
-            border: 2px dashed $red;
-            background: $lightRed;
-        }
-
-        span {
-            @include poppins;
-        }
-    }
-
-    input[type='file'] {
-        position: absolute;
-        height: 0px;
-        width: 0px;
-        pointer-events: none;
-    }
-
-    .card {
-        margin-top: 20px;
-        padding: 20px 24px;
-        row-gap: 20px;
-
-        .payment-info {
-            display: grid;
-            grid-template-columns: 70px 1fr auto;
-            justify-items: center;
-            align-items: center;
-            column-gap: 20px;
-
-            h4 {
-                cursor: text;
-            }
-
-            a {
-
-                i:hover,
-                &:focus-within i {
-                    color: $red;
-                }
-
-                i {
-                    color: #888;
-                    font-weight: 400;
-                        margin: 0 8px;
-                }
-            }
-        }
-    }
-
+  input[type="file"] {
+    position: absolute;
+    height: 0px;
+    width: 0px;
+    pointer-events: none;
+  }
 }
