--- a/css/student/_nav.scss
+++ b/css/student/_nav.scss
@@ -5,7 +5,7 @@ nav {
   padding: 0 150px;
   background: white;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   border-bottom: 1px solid #eee;
 
@@ -16,37 +16,36 @@ nav {
 
   .nav-back,
   .nav-user {
-    height: 100%;
+    height: 70px;
     width: 100px;
     display: flex;
+    justify-content: center;
     align-items: center;
     column-gap: 16px;
+    position: absolute;
   }
 
-  .nav-back i {
-    font-size: 14px;
-  }
-
-  .logo,
-  img {
-    width: 100px;
-  }
-
-  img {
-    pointer-events: none;
+  .nav-back {
+    left: 150px;
+    i {
+      font-size: 14px;
+    }
   }
 
   .nav-user {
-
+    right: 150px;
     &:hover .user-dropdown,
     &:focus-within .user-dropdown {
       animation: slide-down 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
       opacity: 1;
       z-index: 1;
     }
-
+    i.fa-user {
+      display: none;
+    }
     .user-dropdown {
-      margin: 220px 0 0 -30px;
+      width: max-content;
+      margin: 220px 0 0 -40px;
       padding: 12px 12px 16px 12px;
       display: flex;
       flex-direction: column;
@@ -112,6 +111,19 @@ nav {
         }
       }
     }
+  }
+
+  .logo {
+    display: flex;
+  }
+
+  .logo,
+  img {
+    width: 100px;
+  }
+
+  img {
+    pointer-events: none;
   }
 }
 
