--- a/css/student/student-dark.css
+++ b/css/student/student-dark.css
@@ -13,7 +13,7 @@ nav {
   padding: 0 150px;
   background: white;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   border-bottom: 1px solid #eee;
 }
@@ -25,24 +25,25 @@ nav label {
 
 nav .nav-back,
 nav .nav-user {
-  height: 100%;
+  height: 70px;
   width: 100px;
   display: flex;
+  justify-content: center;
   align-items: center;
   column-gap: 16px;
+  position: absolute;
+}
+
+nav .nav-back {
+  left: 150px;
 }
 
 nav .nav-back i {
   font-size: 14px;
 }
 
-nav .logo,
-nav img {
-  width: 100px;
-}
-
-nav img {
-  pointer-events: none;
+nav .nav-user {
+  right: 150px;
 }
 
 nav .nav-user:hover .user-dropdown,
@@ -52,8 +53,13 @@ nav .nav-user:focus-within .user-dropdown {
   z-index: 1;
 }
 
+nav .nav-user i.fa-user {
+  display: none;
+}
+
 nav .nav-user .user-dropdown {
-  margin: 220px 0 0 -30px;
+  width: max-content;
+  margin: 220px 0 0 -40px;
   padding: 12px 12px 16px 12px;
   display: flex;
   flex-direction: column;
@@ -119,6 +125,19 @@ nav .nav-user .user-dropdown i.fad.fa-moon-cloud {
   --fa-secondary-color: #f9d35f;
   --fa-primary-opacity: 1;
   --fa-secondary-opacity: 1;
+}
+
+nav .logo {
+  display: flex;
+}
+
+nav .logo,
+nav img {
+  width: 100px;
+}
+
+nav img {
+  pointer-events: none;
 }
 
 @keyframes slide-down {
@@ -301,7 +320,7 @@ nav .nav-user .user-dropdown i.fad.fa-moon-cloud {
 }
 
 .payment {
-  padding: 10px 36px 36px 36px;
+  padding: 12px 36px 0 36px;
   display: flex;
   flex-direction: column;
 }
@@ -310,21 +329,43 @@ nav .nav-user .user-dropdown i.fad.fa-moon-cloud {
   margin-bottom: 10px;
 }
 
-.payment .order {
-  width: max-content;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+.payment .card {
+  margin-top: 20px;
   margin-bottom: 30px;
+  padding: 20px 24px;
+  row-gap: 20px;
+}
+
+.payment .card .payment-info {
+  display: grid;
+  grid-template-columns: 70px 1fr auto;
+  justify-items: center;
+  align-items: center;
+  column-gap: 20px;
+}
+
+.payment .card .payment-info p {
+  font-family: "Poppins", sans-serif;
+  cursor: text;
+}
+
+.payment .card .payment-info a i:hover,
+.payment .card .payment-info a:focus-within i {
+  color: #e20c18;
+}
+
+.payment .card .payment-info a i {
+  color: #888;
+  font-weight: 400;
+  margin: 0 8px;
 }
 
 .payment .receipt-input {
-  width: max-content;
-  margin-bottom: 30px;
-  padding: 6px 12px;
+  padding: 8px 12px;
   border-radius: 8px;
-  border: 2px dashed #ccc;
+  border: 2px dashed #dadada;
   display: flex;
+  justify-content: center;
   align-items: center;
   column-gap: 10px;
   transition: 0.1s ease-out;
@@ -340,40 +381,45 @@ nav .nav-user .user-dropdown i.fad.fa-moon-cloud {
   font-family: "Poppins", sans-serif;
 }
 
-.payment input[type='file'] {
+.payment input[type="file"] {
   position: absolute;
   height: 0px;
   width: 0px;
   pointer-events: none;
 }
 
-.payment .card {
-  margin-top: 20px;
-  padding: 20px 24px;
-  row-gap: 20px;
-}
-
-.payment .card .payment-info {
-  display: grid;
-  grid-template-columns: 70px 1fr auto;
-  justify-items: center;
-  align-items: center;
-  column-gap: 20px;
-}
-
-.payment .card .payment-info h4 {
-  cursor: text;
-}
-
-.payment .card .payment-info a i:hover,
-.payment .card .payment-info a:focus-within i {
-  color: #e20c18;
-}
-
-.payment .card .payment-info a i {
-  color: #888;
-  font-weight: 400;
-  margin: 0 8px;
+@media only screen and (max-width: 768px) {
+  nav .nav-back span,
+  nav .nav-username span {
+    display: none;
+  }
+  nav .nav-back,
+  nav .nav-user {
+    width: 50px;
+  }
+  nav .nav-back {
+    left: 20px;
+  }
+  nav .nav-user {
+    right: 20px;
+  }
+  nav .nav-user i.fa-user {
+    display: block;
+  }
+  nav .nav-user .fa-caret-down {
+    display: none;
+  }
+  nav .nav-user .user-dropdown {
+    margin: 220px 0 0 -140px;
+  }
+  .container {
+    flex-direction: column;
+    align-items: center;
+  }
+  .card.request {
+    width: 250px;
+    padding: 32px 36px 36px 36px;
+  }
 }
 
 body {
