--- a/css/student/student.css
+++ b/css/student/student.css
@@ -59,7 +59,7 @@ nav .nav-user i.fa-user {
 
 nav .nav-user .user-dropdown {
   width: max-content;
-  margin: 220px 0 0 -40px;
+  margin: 220px 0 0 -70px;
   padding: 12px 12px 16px 12px;
   display: flex;
   flex-direction: column;
@@ -165,7 +165,6 @@ nav img {
   flex-direction: column;
   row-gap: 12px;
   animation: scale-down-center 0.1s ease-in both;
-  opacity: 0;
 }
 
 .container .button.card i {
@@ -217,7 +216,6 @@ nav img {
   border: 1px solid #dadada;
   border-radius: 16px;
   text-align: left;
-  opacity: 0;
 }
 
 .card .col {
@@ -246,6 +244,11 @@ nav img {
   background: #eee;
   color: #222;
   border: 1px solid #f8f8f8;
+}
+
+.card a.view-request span,
+.card button span {
+  font-size: 14px;
 }
 
 .card a.view-request:hover,
@@ -413,12 +416,28 @@ nav img {
     margin: 220px 0 0 -140px;
   }
   .container {
+    margin: 50px 0 0 0 !important;
+    padding: 0 0 100px 0;
     flex-direction: column;
     align-items: center;
   }
   .card.request {
     width: 250px;
-    padding: 32px 36px 36px 36px;
+    padding: 24px 32px 28px 32px;
+  }
+  a.view-request,
+  button {
+    background: #f2f2f2 !important;
+    opacity: 1 !important;
+  }
+  a.view-request i,
+  button i {
+    font-size: 14px !important;
+  }
+  a.view-request:focus, a.view-request:focus-within,
+  button:focus,
+  button:focus-within {
+    background: #eee !important;
   }
 }
 
@@ -432,7 +451,9 @@ nav {
 }
 
 .container {
+  height: calc(100% - 81px - 100px - 10vh);
   margin-top: 40px;
+  padding-bottom: 100px;
   display: flex;
   justify-content: center;
   column-gap: 50px;
