--- a/css/student/student.scss
+++ b/css/student/student.scss
@@ -16,7 +16,9 @@ nav {
 }
 
 .container {
+  height: calc(100% - 81px - 100px - 10vh);
   margin-top: 40px;
+  padding-bottom: 100px;
   display: flex;
   justify-content: center;
   column-gap: 50px;
